--- a/sliderStyle.css
+++ b/sliderStyle.css
@@ -1,11 +1,29 @@
+@keyframes slideIn {
+    from {
+      opacity: 0;
+      transform: translateY(-10%);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
 .sliderParentRow{
-
+    position: relative;
 }
-
 .sliderTextBox{
-    padding-top: 250px;
-}
+    padding-top: 200px;
+    transition: opacity 0.5s ease-in-out;
+    animation: slideIn 1s ease-in-out;
 
+}
+#sliderPagination{
+    position: absolute;
+    top: 35%;
+    right: 0;
+    transform: translate(-50%, -50%);
+}
 
 @media only screen and (max-width: 990px){
     .sliderParentRow{
@@ -23,6 +41,9 @@
         padding: 10px;
         text-align: center;
     }
+    #sliderPagination{
+        display: none;
+     }
 }
 
 @media only screen and (max-width: 425px){
